
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct resource_list_entry {int * res; } ;
struct resource {int dummy; } ;
struct pci_devinfo {int resources; } ;
typedef int device_t ;


 int RF_ACTIVE ;
 int SYS_RES_MEMORY ;
 int bus_deactivate_resource (int ,int ,int,struct resource*) ;
 struct pci_devinfo* device_get_ivars (int ) ;
 int resource_list_delete (int *,int ,int) ;
 struct resource_list_entry* resource_list_find (int *,int ,int) ;
 int rman_get_flags (struct resource*) ;
 int rman_release_resource (struct resource*) ;

int
pci_vf_release_mem_resource(device_t dev, device_t child, int rid,
    struct resource *r)
{
 struct pci_devinfo *dinfo;
 struct resource_list_entry *rle;
 int error;

 dinfo = device_get_ivars(child);

 if (rman_get_flags(r) & RF_ACTIVE) {
  error = bus_deactivate_resource(child, SYS_RES_MEMORY, rid, r);
  if (error != 0)
   return (error);
 }

 rle = resource_list_find(&dinfo->resources, SYS_RES_MEMORY, rid);
 if (rle != ((void*)0)) {
  rle->res = ((void*)0);
  resource_list_delete(&dinfo->resources, SYS_RES_MEMORY,
      rid);
 }

 return (rman_release_resource(r));
}
