; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_iov.c_pci_vf_release_mem_resource.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_iov.c_pci_vf_release_mem_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }
%struct.pci_devinfo = type { i32 }
%struct.resource_list_entry = type { i32* }

@RF_ACTIVE = common dso_local global i32 0, align 4
@SYS_RES_MEMORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pci_vf_release_mem_resource(i32 %0, i32 %1, i32 %2, %struct.resource* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.resource*, align 8
  %10 = alloca %struct.pci_devinfo*, align 8
  %11 = alloca %struct.resource_list_entry*, align 8
  %12 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store %struct.resource* %3, %struct.resource** %9, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call %struct.pci_devinfo* @device_get_ivars(i32 %13)
  store %struct.pci_devinfo* %14, %struct.pci_devinfo** %10, align 8
  %15 = load %struct.resource*, %struct.resource** %9, align 8
  %16 = call i32 @rman_get_flags(%struct.resource* %15)
  %17 = load i32, i32* @RF_ACTIVE, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %31

20:                                               ; preds = %4
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* @SYS_RES_MEMORY, align 4
  %23 = load i32, i32* %8, align 4
  %24 = load %struct.resource*, %struct.resource** %9, align 8
  %25 = call i32 @bus_deactivate_resource(i32 %21, i32 %22, i32 %23, %struct.resource* %24)
  store i32 %25, i32* %12, align 4
  %26 = load i32, i32* %12, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %20
  %29 = load i32, i32* %12, align 4
  store i32 %29, i32* %5, align 4
  br label %50

30:                                               ; preds = %20
  br label %31

31:                                               ; preds = %30, %4
  %32 = load %struct.pci_devinfo*, %struct.pci_devinfo** %10, align 8
  %33 = getelementptr inbounds %struct.pci_devinfo, %struct.pci_devinfo* %32, i32 0, i32 0
  %34 = load i32, i32* @SYS_RES_MEMORY, align 4
  %35 = load i32, i32* %8, align 4
  %36 = call %struct.resource_list_entry* @resource_list_find(i32* %33, i32 %34, i32 %35)
  store %struct.resource_list_entry* %36, %struct.resource_list_entry** %11, align 8
  %37 = load %struct.resource_list_entry*, %struct.resource_list_entry** %11, align 8
  %38 = icmp ne %struct.resource_list_entry* %37, null
  br i1 %38, label %39, label %47

39:                                               ; preds = %31
  %40 = load %struct.resource_list_entry*, %struct.resource_list_entry** %11, align 8
  %41 = getelementptr inbounds %struct.resource_list_entry, %struct.resource_list_entry* %40, i32 0, i32 0
  store i32* null, i32** %41, align 8
  %42 = load %struct.pci_devinfo*, %struct.pci_devinfo** %10, align 8
  %43 = getelementptr inbounds %struct.pci_devinfo, %struct.pci_devinfo* %42, i32 0, i32 0
  %44 = load i32, i32* @SYS_RES_MEMORY, align 4
  %45 = load i32, i32* %8, align 4
  %46 = call i32 @resource_list_delete(i32* %43, i32 %44, i32 %45)
  br label %47

47:                                               ; preds = %39, %31
  %48 = load %struct.resource*, %struct.resource** %9, align 8
  %49 = call i32 @rman_release_resource(%struct.resource* %48)
  store i32 %49, i32* %5, align 4
  br label %50

50:                                               ; preds = %47, %28
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

declare dso_local %struct.pci_devinfo* @device_get_ivars(i32) #1

declare dso_local i32 @rman_get_flags(%struct.resource*) #1

declare dso_local i32 @bus_deactivate_resource(i32, i32, i32, %struct.resource*) #1

declare dso_local %struct.resource_list_entry* @resource_list_find(i32*, i32, i32) #1

declare dso_local i32 @resource_list_delete(i32*, i32, i32) #1

declare dso_local i32 @rman_release_resource(%struct.resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
